basics section created

--- a/basic-concepts/basics-4.html
+++ b/basic-concepts/basics-4.html
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Solve an Equation</h3>
+                        <h3>Solve the Equation</h3>
                         <hr>
                         <p>Now we know what variables factor in, but we'll need to derive the equation to understand how they relate to each other. Let's see this in action with a simple example.</p>
                         <p class="question">How much money would you have in 1 year if you invested $100 at a rate of 10%?</p>
