--- a/basic-concepts/help/help-index.html
+++ b/basic-concepts/help/help-index.html
@@ -33,8 +33,8 @@
                     <div class="content">
                         <p>Click on the question to see how to calculate the answer for that question or check the Basic Math Help page for a review of needed concepts.</p>
                         <ul>
-                            <li>Basic Math Help: &nbsp;<a href="./math-basics.html">Math Concepts Refresher</a></li>
-                            <li>Example 2: &nbsp;<a href="./help1-2.html">How much money would you have in another year if you rolled over the $110 earned in the first year?</a></li>
+                            <li>Basic Math Help: <a href="./math-basics.html">Math Concepts Refresher</a></li>
+                            <li><a href="./help-fv.html">Solve for Future Value (FV)</a> with the basic equation</li>
                             <li>Example 3: &nbsp;<a href="./help1-3.html">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</a></li>
                             <li>Example 4: &nbsp;<a href="./help1-4.html">If you need to triple your investment in 10 years, what interest rate will you need?</a></li>
                             <li>Example 5: &nbsp;<a href="./help1-5.html">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</a></li>
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-1 offset-sm-1">
+                <div class="col-sm-1">
                     <div class="page-number"></div>
                 </div>
                 <!-- <div class="offset-5 col-4 offset-md-6">
