--- a/basic-concepts/help/help1-3.html
+++ b/basic-concepts/help/help1-3.html
@@ -38,36 +38,36 @@
                                 <li>
                                     First, identify the variables in the problem:
                                     <p>This time we’re looking for PV, because the question asks how much you would pay today.
-                                        <div><img class="math" src="../images/what-is-pv.svg"></div>
+                                        <div><img class="math" src="../../images/what-is-pv.svg"></div>
                                     </p>
                                     <p>We know that the $259.37 is the FV, because it will be paid in the future.
-                                        <div><img class="math" src="../images/fv-answer.svg"></div>
+                                        <div><img class="math" src="../../images/fv-answer.svg"></div>
                                     </p>
                                     <p>Remember that i is a percentage or decimal.
-                                        <div><img class="math" src="../images/ten-percent.svg"></div>
+                                        <div><img class="math" src="../../images/ten-percent.svg"></div>
                                     </p>
                                     <p>n is an expression of time such as years or decades.
-                                        <div><img class="math" src="../images/n-equals-10.svg"></div>
+                                        <div><img class="math" src="../../images/n-equals-10.svg"></div>
                                     </p>
                                 </li>
                                 <li>
                                     <p>Once you've identified the variables, plug the numbers into the equation: </p>
-                                    <div><img class="math" src="../images/replace-variables.svg"></div>
+                                    <div><img class="math" src="../../images/replace-variables.svg"></div>
                                 </li>
                                 <li>Then solve for the unknown variable, in this case PV. Remember to use the order of operations (PEMDAS).
                                     <p>Parentheses: Add the numbers in the parentheses.
-                                        <div><img class="math" src="../images/add-numbers.svg"></div>
+                                        <div><img class="math" src="../../images/add-numbers.svg"></div>
                                     </p>
                                     <p>Exponents: Raise the number in the parentheses to the exponent. Leave enough significant digits so that you don’t commit a rounding error.
                                         <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
                                     </p>
                                     <p>Multiple and Divide: Divide both sides by the same number to isolate PV. Remember to cancel out the fraction
-                                        <div><img class="math" src="../images/multiply-and-divide.svg" style='height: 55px;'></div>
+                                        <div><img class="math" src="../../images/multiply-and-divide.svg" style='height: 55px;'></div>
                                     </p>
                                     <p>Adding and Subtracting is not necessary for this problem. The addition in this specific equation was taken care of in the parentheses.</p>
                                 </li>
                                 <li>Finally, simplify the fraction to solve for PV.
-                                    <div><img class="math" src="../images/solve-for-pv.svg" style='height: 45px;'></div>
+                                    <div><img class="math" src="../../images/solve-for-pv.svg" style='height: 45px;'></div>
                                 </li>
                         </p>
                         </ul>
