--- a/not-on-server/basics-11.html
+++ b/not-on-server/basics-11.html
@@ -32,16 +32,16 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Answer this question:</p>
                         <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
-                        <p>When you think you have the answer, click Continue. If you don’t know how to calculate the answer, click Help.</p>
+                        <p class="answer">The answer is 11.612%.</p>
+                        <p>If you answered correctly, click Continue. If you answered incorrectly, click the Help button to calculate the answer.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-12.html">Back</a>
-                    <a type="button" class="btn" href="basics-14.html">Continue</a>
+                    <a type="button" class="btn" href="basics-10.html">Back</a>
+                    <a type="button" class="btn" href="basics-12.html">Continue</a>
                 </div>
             </div>
             <div class="row">
