--- a/formulas/basics-10.html
+++ b/formulas/basics-10.html
@@ -15,11 +15,12 @@
 <body>
     <div class="container-fluid">
 
+
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
@@ -31,21 +32,29 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>So far we have calculated FV with the TVM equation and the Future Value Factor.</p>
-                        <p>A third way to calculate TVM is with a financial calculator. If you have a financial calculator, now would be a good time to make sure you know how to use it.</p>
-                        <p>Plug in the numbers to verify that the equation and calculator find the same FV using the math question you are familiar with.</p>
-                        <p class="alert">Note: Your calculator must be on End mode -- this is the most common mistake made on tests. Also, keep in mind that PV is entered as a negative number and interest is entered as a whole number.</p>
-                        <p class="question">How much would $100 grow in 10 years at 10%?</p>
-                        <p class="text-center">
-                            <img src="../images/tvm1_calculator_check_example.png" class="img-fluid">
+                        <h3>Solve the Equation</h3>
+                        <hr>
+                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
+                        <p class="answer">The answer is 11.612%.</p>
+                        <h5>Steps for solving the sample equation.</h5>
+                        <p>Even though not all the numbers are listed in the problem, we can identify the time frame. Identifying FV and PV might be difficult since they aren't explicitly stated, however we know our future value will be 3 times our current value. This means we can use any current value for our calculation. To make it easy, use $1. This means our future value would be $3.</p>
+                        <p>Remember: To find the reciprocal, turn the number into a fraction and then flip it over:
+                            <span class="math" style="font-size: 1.5em;">\(10=\frac{10}{1}\nearrow\frac{1}{10}\)</span>
                         </p>
+                        <p>First, identify the variables in the problem. In essence, this question asks how much interest it will take to turn $1 that you have today into $3 in 10 years.</p>
+                        <div><img class="math" src="../../images/variables2.svg"></div>
+                        <p>Next, plug the numbers into the equation:</p>
+                        <div><img class="math" src="../../images/replace-the-variables2.svg"></div>
+                        <p>Then solve for the unknown variable, which is interest (i) in this problem.</p>
+                        <p>IMPORTANT: The order of operations still applies to this problem. However, we can’t start as we normally would by adding the numbers in the parentheses, because one is an unknown variable. We also have to skip the exponent for now, because of the unknown variable.</p>
+
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-8.html">Back</a>
-                    <a type="button" class="btn" href="basics-10.html">Continue</a>
+                    <a type="button" class="btn" href="basics-9.html">Back</a>
+                    <a type="button" class="btn" href="basics-11.html">Continue</a>
                 </div>
             </div>
             <div class="row">
