--- a/formulas/basics-11.html
+++ b/formulas/basics-11.html
@@ -16,12 +16,11 @@
     <div class="container-fluid">
 
 
-
-        <div id="" class="slide">
+        <div id="" class="slide stop">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h3 class="secondary-title">Sample Problems</h3>
                 </div>
             </div>
             <nav class="row">
@@ -33,19 +32,18 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p>Many textbooks will present you with four different TVM equations; one solving for each variable: FV, PV, i, and n. As a result you have to memorize four equations instead of one. There's an easier route!</p>
-                        <p>If you know the general TVM equation and have some basic math skills, you can solve for any of the four variables. We've already solved for Future Value (FV). Now we'll try 3 more example problems, solving for the other 3 variables. <span class="alert">For all these questions, solve without using the TVM buttons on your financial calculator.</span></p>
-                        <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
-                        <p>If you need assistance with this question, click Help.</p>
+                        <p>Answer this question:</p>
+                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
+
+                        <p>Follow the pattern we have used in the previous sample problems. If you don’t know how to calculate the answer, click Help.</p>
 
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <!-- needs a help button  -->
-                    <a type="button" class="btn" href="basics-9.html">Back</a>
-                    <a type="button" class="btn" href="basics-11.html">Continue</a>
+                    <a type="button" class="btn" href="basics-10.html">Back</a>
+                    <a type="button" class="btn" href="basics-12.html">Continue</a>
                 </div>
             </div>
             <div class="row">
