--- a/formulas/basics-12.html
+++ b/formulas/basics-12.html
@@ -32,16 +32,19 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
-                        <p class="answer">The answer is $100.</p>
-                        <p> If you answered correctly, click Continue. If you answered incorrectly, click Help to calculate the answer.</p>
+                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
+                        <p class="answer">The answer is 4.7 years.</p>
+                        <p>Did you get the right answer? If you answered incorrectly, click Help to calculate the answer.</p>
+                        <hr>
+                        <p>You have now solved a TVM equation for each of the 4 variables: Present Value, Future Value, Interest, and Time.</p>
+                        <p>This proves that you can solve for any of the four variables if you know the general TVM equation and have some basic math skills. You will have more opportunities to practice manipulating the equation in the Exercises section.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-10.html">Back</a>
-                    <a type="button" class="btn" href="basics-12.html">Continue</a>
+                    <a type="button" class="btn" href="basics-11.html">Back</a>
+                    <a type="button" class="btn" href="./exercises/exerciseIntro-1.html">To Exercises</a>
                 </div>
             </div>
             <div class="row">
