--- a/formulas/basics-7.html
+++ b/formulas/basics-7.html
@@ -15,12 +15,11 @@
 <body>
     <div class="container-fluid">
 
-
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Sample Problems</h3>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,19 +31,20 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
-                        <p class="answer">The answer is 4.7 years.</p>
-                        <p>Did you get the right answer? If you answered incorrectly, click Help to calculate the answer.</p>
-                        <hr>
-                        <p>You have now solved a TVM equation for each of the 4 variables: Present Value, Future Value, Interest, and Time.</p>
-                        <p>This proves that you can solve for any of the four variables if you know the general TVM equation and have some basic math skills. You will have more opportunities to practice manipulating the equation in the Exercises section.</p>
+                        <p>So far we have calculated FV with the TVM equation. Another way to calculate TVM is with a financial calculator. If you have a financial calculator, now would be a good time to make sure you know how to use it. Feel free to click on the Financial Calculator links and test an online calculator.</p>
+                        <p>Plug in the numbers to verify that the equation and calculator find the same FV using the math question you are familiar with.</p>
+                        <p class="alert">Note: Your calculator must be on End mode -- this is the most common mistake made on tests. Also, keep in mind that PV is entered as a negative number and interest is entered as a whole number.</p>
+                        <p class="question">How much would $100 grow in 10 years at 10%?</p>
+                        <p class="text-center">
+                            <img src="../images/tvm1_calculator_check_example.png" class="img-fluid">
+                        </p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-15.html">Back</a>
-                    <a type="button" class="btn" href="./exercises/exerciseIntro-1.html">To Exercises</a>
+                    <a type="button" class="btn" href="basics-6.html">Back</a>
+                    <a type="button" class="btn" href="basics-8.html">Continue</a>
                 </div>
             </div>
             <div class="row">
