--- a/formulas/basics-8.html
+++ b/formulas/basics-8.html
@@ -16,11 +16,12 @@
     <div class="container-fluid">
 
 
+
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Sample Problems</h3>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
             <nav class="row">
@@ -32,16 +33,15 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
-                        <p class="answer">The answer is 11.612%.</p>
-                        <p>If you answered correctly, click Continue. If you answered incorrectly, click the Help button to calculate the answer.</p>
+                        <p>Many textbooks will present you with four different TVM equations; one solving for each variable: FV, PV, i, and n. As a result you have to memorize four equations instead of one. There's an easier route! If you know the general TVM equation and have some basic math skills, you can solve for any of the four variables. We've already solved for Future Value (FV). Now we'll try 3 more example problems, solving for the other 3 variables.</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-13.html">Back</a>
-                    <a type="button" class="btn" href="basics-15.html">Continue</a>
+                    <!-- needs a help button  -->
+                    <a type="button" class="btn" href="basics-7.html">Back</a>
+                    <a type="button" class="btn" href="basics-9.html">Continue</a>
                 </div>
             </div>
             <div class="row">
