updating file structure, naming, exercise function and validation

--- a/basic-concepts/basics-4.html
+++ b/basic-concepts/basics-4.html
@@ -24,9 +24,9 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -47,7 +47,8 @@
                                     <li>First identify the interest (i) rate. Look for a percent or decimal. <span class="alert">Note: If you are using a financial calculator, use the percent, and if you are figuring the calculations on your own, use the decimal format.</span></li>
                                     <li>Identify the principal or present value (PV). To distinguish between Present Value (PV) and Future Value (FV), ask yourself whether the dollar amount is money you have now or in the future. Since $100 is today's investment, it must be Present Value (PV). This question asks what it <i>will</i> be worth, indicating we want to find the Future Value (FV).</li>
                                     <li>Multiply the interest rate times the principal amount.
-                                    <div><span class="math">$$.10\times100=10$$</span></div></li>
+                                        <div><span class="math">$$.10\times100=10$$</span></div>
+                                    </li>
                                 </ul>
                             </li>
                             <li>Finally, time (n) is an expression of time, usually months or years. To calculate the amount you'd have in one year, add the interest payment back to the initial investment (principal).
