--- a/basic-concepts/basics-5.html
+++ b/basic-concepts/basics-5.html
@@ -23,12 +23,12 @@
                     <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
-            <nav class="row">
-                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-            </nav>
+        <nav class="row">
+            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+        </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
@@ -47,13 +47,14 @@
                             </ul>
                         </p>
                         <p>In other words, we calculated the interest earned in each individual year and added all the interest payments back to the principal to find the Future Value (FV). Click help if you need more help to solve this question.</p>
+                        <p>It’s important that you grasp the basics of TVM before continuing on to more advanced topics. To help you gauge your understanding of the TVM basics, its time to try some exercises on your own. <span class="alert">Your answers should include dollars and cents. Do not enter commas (,) or symbols (% or $) into the input fields. For example, a properly formatted answer looks like this:</span> <span class="answer">1150.38</span></p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
                     <a type="button" class="btn" href="basics-4.html">Back</a>
-                    <a type="button" class="btn" href="basics-6.html">Continue</a>
+                    <a type="button" class="btn" href="./exercises/exerciseIntro-1.html">To Exercises</a>
                 </div>
             </div>
             <div class="row">
