--- a/basic-concepts/exercise11-20.html
+++ b/basic-concepts/exercise11-20.html
@@ -15,8 +15,7 @@
 <body>
     <div class="container-fluid">
 
-
-        <!-- problem 7  -->
+        <!-- problem 13  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -25,28 +24,29 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 7: Calculate the Unknown Variable</h4>
+                        <h4>Exercise 13: Calculate the Unknown Variable</h4>
                         <p>Solve the TVM equation and enter the value of the variable in the box provided.</p>
-                        <p class="question">What interest rate is required for a deposit to double in 10 years? <span class="note">Note: Include 3 digits to the right of the decimal.</p>
+
+                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label>i </label>
-                                    <input id="int-ex7" type="number" placeholder="0.000"><br>
+                                    <label> </label>
+                                    <input id="Present Value (PV)alue-ex13" type="number"><br>
                                 </form>
-                                <button onclick="exercise_7()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_13()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex7"></div>
+                            <div class="answer" id="answer-ex13"></div>
                         </div>
                     </div>
                 </div>
