--- a/basic-concepts/exercise9-16.html
+++ b/basic-concepts/exercise9-16.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 2 answer  -->
+        <!-- problem 9  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -23,26 +23,30 @@
                     <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
-            <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-            </nav>
+        <nav class="row">
+            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+        </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <!-- Help -->
-                        <h4>Exercise 2: Solution</h4>
-                        <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
-                        <p>Variables:</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">
-                            Present Value (PV) = 2000 <br>
-                            Future Value (FV) = ? <br>
-                            i = 8% &xrarr; 0.08<br>
-                            n = 15
-                        </p>
+
+                        <h4>Exercise 9: Calculate the Unknown Variable</h4>
+                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
+                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double? <span class="note">Note: Please round to 3 places after the decimal point.</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+                                    <label>n </label>
+                                    <input id="yrs-ex9" type="number"><br>
+                                </form>
+                                <button onclick="exercise_9()" type="button" class="btn calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex9"></div>
+                        </div>
                     </div>
                 </div>
             </div>
