--- a/navbar.html
+++ b/navbar.html
@@ -8,8 +8,8 @@
 </div> -->
 
 <nav class="row">
-    <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-    <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-    <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+    <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+    <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+    <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
     <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
 </nav>
