--- a/not-on-server/exercise2a-3.html
+++ b/not-on-server/exercise2a-3.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 3 -->
+        <!--  problem 2 answer  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -23,31 +23,26 @@
                     <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
-            <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-            </nav>
+        <nav class="row">
+            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+        </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
-                        <h4>Exercise 3: Calculate the Unknown Variable</h4>
-                        <p>Now solve the TVM equation from the last screen and enter the value of the unknown variable.</p>
-                        <p>Hint: The information from the last question shows we are looking for the Future Value (Future Value (FV)).</p>
+                        <!-- Help -->
+                        <h4>Exercise 2: Solution</h4>
                         <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex3" type="number"><br>
-                                </form>
-                                <button onclick="exercise_3()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex3"></div>
-                        </div>
+                        <p>Variables:</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">
+                            Present Value (PV) = 2000 <br>
+                            Future Value (FV) = ? <br>
+                            i = 8% &xrarr; 0.08<br>
+                            n = 15
+                        </p>
                     </div>
                 </div>
             </div>
@@ -59,7 +54,7 @@
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">30</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
