--- a/not-on-server/exerciseIntro-1.html
+++ b/not-on-server/exerciseIntro-1.html
@@ -14,9 +14,6 @@
 
 <body>
     <div class="container-fluid">
-
-
-        <!-- problem 15 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -26,33 +23,25 @@
             </div>
             <nav class="row">
                 <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
                 <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 15: Solution</h4>
-                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and pays returns 4% annual interest?</p>
-                        <p>Variables:</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <div class="math">
-                            = ?<br>
-                            = 10000<br>
-                            = 4% &xrarr; 0.04<br>
-                            = 10</div>
-                        <p>Then plug the numbers into the equation:</p>
-                        <div class="math">
-                            <img src="./images/tvm1_question14.png" class="img-fluid " alt="">
-                        </div>
+                        <h3>Exercises</h3>
+                        <p>It’s important that you grasp the basics of TVM before continuing on to more advanced topics. To help you gauge your understanding of the TVM basics, its time to try some exercises on your own.</p>
+                        <h5>Instructions:</h5>
+                        <!-- <p><b>There are 14 exercises in this section.</b></p> -->
+                        <p class="alert">Your answers should include dollars and cents. Do not enter commas (,) or symbols (% or $). For example, a properly formatted answer looks like this: <span class="answer">1150.38</span></p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a href="" type="button" class="hide btn">Back</a>
+                    <a href="exercise2-2.html" type="button" class="btn">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -61,7 +50,6 @@
                 </div>
             </div>
         </div>
-
 
     </div> <!--  end of container -->
 
