--- a/basic-concepts/exercise10a-19.html
+++ b/basic-concepts/exercise10a-19.html
@@ -15,8 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 8  -->
 
+        <!--  problem 12 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -25,34 +25,22 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
-                        <h4>Exercise 8: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
-                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double?</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex8" type="number"><br>
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex8" type="number"><br>
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex8" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex8" type="number"><br>
-                                </form>
-                                <button onclick="exercise_8()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex8"></div>
+                        <h4>Exercise 12: Solution</h4>
+                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <div class="math">
+                            = ?<br>
+                            = 20000<br>
+                            = 7% &xrarr; 0.07<br>
+                            = 18
                         </div>
                     </div>
                 </div>
@@ -69,6 +57,7 @@
                 </div>
             </div>
         </div>
+
 
 
     </div> <!--  end of container -->
