--- a/basic-concepts/exercise11a-21.html
+++ b/basic-concepts/exercise11a-21.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../tvm-styles.css">
+    <link rel="stylesheet" href="../../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -15,62 +15,51 @@
 <body>
     <div class="container-fluid">
 
-
-
-        <div id="" class="slide">
+        <!--  problem 13 answer -->
+        <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">TVM Equation</h3>
+                    <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./tvm1-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 1: Solution</h4>
-                        <p class="question">What would the $100 investment be worth in 10 years at 10%?</p>
-                        <p>Let's work through the problem.</p>
-                        <ul>
-                            <li>First, identify the variables:</li>
-                            <div><img class="math" src="../images/variables.svg">
-                            </div>
-                            <li>Once you've identified the variables, plug the numbers into the equation: </li>
-                            <div><img class="math" src="../images/plug-in-numbers.svg">
-                            </div>
-                            <li>Starting with the parentheses, add the numbers in place of the variables and do the addition.</li>
-                            <div><img class="math" src="../images/add-numbers.svg">
-                            </div>
-
-                            <li>Next, apply the exponent. Be careful about rounding.</li>
-                            <div><img class="math" src="../images/apply-exponent.svg"></div>
-
-
-                            <li>Finally, do the multiplication.</li>
-                            <div><img class="math" src="../images/fv-answer.svg"></div>
-                            </li>
-                        </ul>
+                        <h4>Exercise 13: Solution</h4>
+                        <p class="questions">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <p>Variables:</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">
+                            = ?<br>
+                            = 20000<br>
+                            = 7% &xrarr; 0.07<br>
+                            = 18</p>
+                        <p>Then plug the numbers into the equation:</p>
+                        <div class="math">
+                            <img src="./images/tvm1_question12.png" class="img-fluid " alt="">
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a type="button" class="btn" href="basics-7.html">Back</a>
-                    <a type="button" class="btn" href="basics-9.html">Continue</a>
+                    <a href="" type="button" class="btn">Back</a>
+                    <a href="" type="button" class="btn">Continue</a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-1">
-                    <div class="page-number">11</div>
+                    <div class="page-number"></div>
                 </div>
             </div>
         </div>
-
 
 
     </div> <!--  end of container -->
