--- a/basic-concepts/exercise13-24.html
+++ b/basic-concepts/exercise13-24.html
@@ -14,6 +14,8 @@
 
 <body>
     <div class="container-fluid">
+
+        <!-- problem 15  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -22,26 +24,38 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+                <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
                 <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Exercises</h3>
-                        <p>It’s important that you grasp the basics of TVM before continuing on to more advanced topics. To help you gauge your understanding of the TVM basics, its time to try some exercises on your own.</p>
-                        <h5>Instructions:</h5>
-                        <!-- <p><b>There are 14 exercises in this section.</b></p> -->
-                        <p class="alert">Your answers should include dollars and cents. Do not enter commas (,) or symbols (% or $). For example, a properly formatted answer looks like this: <span class="answer">1150.38</span></p>
+
+
+                        <h4>Exercise 15: Calculate the Unknown Variable</h4>
+                        <p>Solve the TVM equation and enter the value of the variable in the box provided.</p>
+
+                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and pays returns 4% annual interest?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+                                    <label> </label>
+                                    <input id="Present Value (PV)alue-ex15" type="number"><br>
+                                </form>
+                                <button onclick="exercise_15()" type="button" class="btn calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex15"></div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="hide btn">Back</a>
-                    <a href="exercise2-2.html" type="button" class="btn">Continue</a>
+                    <a href="" type="button" class="btn">Back</a>
+                    <a href="" type="button" class="btn">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -50,6 +64,7 @@
                 </div>
             </div>
         </div>
+
 
     </div> <!--  end of container -->
 
