--- a/basic-concepts/exercise14-26.html
+++ b/basic-concepts/exercise14-26.html
@@ -15,33 +15,24 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 8 answer -->
-        <div id="" class="slide exercise-slide">
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
                     <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
-            <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-            </nav>
+        <nav class="row">
+            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+        </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 8: Solution</h4>
-                        <p>At a rate of 12% annual interest, how long would it take for an amount to double?</p>
-                        <p>LIke one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV)</span c> to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">
-                            Present Value (PV) = 1<br>
-                            Future Value (FV) = 2<br>
-                            i = 12% &xrarr; .12<br>
-                            n = ?
-                        </p>
+                        <h3>Congratulations!</h3>
+                        <p>You’ve completed the TVM Basics Tutorial. If you were confident answering the exercise questions and got most of them right, then you have a good grasp of the basics of TVM. If you were not able to answer most of the exercise questions correctly, contact your instructor for additional help. Feel free to go through this tutorial as many times as needed to help you with the concepts.</p>
                     </div>
                 </div>
             </div>
@@ -57,8 +48,6 @@
                 </div>
             </div>
         </div>
-
-
 
     </div> <!--  end of container -->
 
