--- a/basic-concepts/exercise6-10.html
+++ b/basic-concepts/exercise6-10.html
@@ -15,7 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 14  -->
+
+        <!-- problem 6  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -23,35 +24,35 @@
                     <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
-            <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-            </nav>
+        <nav class="row">
+            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+        </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 14: Identify the Variables</h4>
-                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
-                        <p class="question">What would you expect to pay today for a bond that’s face value is $10,000, matures in 10 years, and returns 4% annual interest?</p>
+                        <h4>Exercise 6: Identify the Variables</h4>
+                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label> </label>
-                                    <input id="Present Value (PV)alue-ex14" type="number"><br>
-                                    <label> </label>
-                                    <input id="Future Value (FV)alue-ex14" type="number"><br>
+                                    <label>Present Value (PV) </label>
+                                    <input id="Present Value (PV)alue-ex6" type="number"><br>
+                                    <label>Future Value (FV) </label>
+                                    <input id="Future Value (FV)alue-ex6" type="number"><br>
                                     <label>Interest (i)</label>
-                                    <input id="int-ex14" type="number"><br>
+                                    <input id="int-ex6" type="number"><br>
                                     <label>Time (n)</label>
-                                    <input id="yrs-ex14" type="number"><br>
+                                    <input id="yrs-ex6" type="number"><br>
                                 </form>
-                                <button onclick="exercise_14()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_6()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex14"></div>
+                            <div class="answer" id="answer-ex6"></div>
                         </div>
                     </div>
                 </div>
