--- a/basic-concepts/exercise8a-15.html
+++ b/basic-concepts/exercise8a-15.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 9  -->
+        <!--  problem 8 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -23,30 +23,25 @@
                     <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
-            <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-            </nav>
+        <nav class="row">
+            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+        </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-
-                        <h4>Exercise 9: Calculate the Unknown Variable</h4>
-                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
-                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double? <span class="note">Note: Please round to 3 places after the decimal point.</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-                                    <label>n </label>
-                                    <input id="yrs-ex9" type="number"><br>
-                                </form>
-                                <button onclick="exercise_9()" type="button" class="btn calculate-btn">Submit</button>
-                            </div>
-                            <br>
-                            <div class="answer" id="answer-ex9"></div>
-                        </div>
+                        <h4>Exercise 8: Solution</h4>
+                        <p>At a rate of 12% annual interest, how long would it take for an amount to double?</p>
+                        <p>LIke one of the previous exercises, the amount invested today will double. In other words, the Future Value (FV)</span c> to Present Value (PV) ratio is 2:1. Use Future Value (FV) = 2 and Present Value (PV) = 1.</p>
+                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
+                        <p class="math">
+                            Present Value (PV) = 1<br>
+                            Future Value (FV) = 2<br>
+                            i = 12% &xrarr; .12<br>
+                            n = ?
+                        </p>
                     </div>
                 </div>
             </div>
@@ -62,6 +57,7 @@
                 </div>
             </div>
         </div>
+
 
 
     </div> <!--  end of container -->
