--- a/not-on-server/basics-7.html
+++ b/not-on-server/basics-7.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../tvm-styles.css">
+    <link rel="stylesheet" href="../tvm-styles.css">
 
     <title>Time Value of Money - Part 1</title>
 </head>
@@ -15,54 +15,53 @@
 <body>
     <div class="container-fluid">
 
-        <div id="" class="slide exercise-slide">
+
+
+        <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: The Basics</h2>
-                    <h3 class="secondary-title">Exercises</h3>
+                    <h3 class="secondary-title">TVM Equation</h3>
                 </div>
             </div>
-            <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-            </nav>
+<nav class="row">
+    <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+    <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+    <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+    <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+</nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 2: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank. Then submit your answer.</p>
-                        <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
-                        <div class="container">
-                            <div class="">
-                                <form action="" class="indent">
-
-                                    <label>Present Value (PV)</label>
-                                    <input id="Present Value (PV)alue-ex2" type="number"><br>
-
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex2" type="number"><br>
-
-                                    <label>Interest (i)</label>
-                                    <input id="int-ex2" type="number"><br>
-
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex2" type="number"><br>
-
-                                </form>
-                                <button onclick="exercise_2()" type="button" class="btn calculate-btn">Submit</button>
+                        <h4>Exercise 1: Solution</h4>
+                        <p class="question">What would the $100 investment be worth in 10 years at 10%?</p>
+                        <p>Let's work through the problem.</p>
+                        <ul>
+                            <li>First, identify the variables:</li>
+                            <div><img class="math" src="../images/variables.svg">
                             </div>
-                            <br>
-                            <div class="answer" id="answer-ex2"></div>
-                        </div>
+                            <li>Once you've identified the variables, plug the numbers into the equation: </li>
+                            <div><img class="math" src="../images/plug-in-numbers.svg">
+                            </div>
+                            <li>Starting with the parentheses, add the numbers in place of the variables and do the addition.</li>
+                            <div><img class="math" src="../images/add-numbers.svg">
+                            </div>
+
+                            <li>Next, apply the exponent. Be careful about rounding.</li>
+                            <div><img class="math" src="../images/apply-exponent.svg"></div>
+
+
+                            <li>Finally, do the multiplication.</li>
+                            <div><img class="math" src="../images/fv-answer.svg"></div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="exerciseIntro-1.html" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="basics-6.html">Back</a>
+                    <a type="button" class="btn" href="basics-8.html">Continue</a>
                 </div>
             </div>
             <div class="row">
@@ -71,6 +70,7 @@
                 </div>
             </div>
         </div>
+
 
 
     </div> <!--  end of container -->
