--- a/not-on-server/exercise2-2.html
+++ b/not-on-server/exercise2-2.html
@@ -15,7 +15,6 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 7 answer -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -23,36 +22,46 @@
                     <h3 class="secondary-title">Exercises</h3>
                 </div>
             </div>
-            <nav class="row">
-                <div class="col-12 col-md-3"><a href="./../basics-1.html">Home</a></div>
-                <div class="col-12 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-12 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
-                <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
-            </nav>
+        <nav class="row">
+            <div class="col-12 col-md-3"><a href="./basics-1.html">Home</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-help.html">Math Help</a></div>
+            <div class="col-12 col-md-3"><a href="./basics-6.html">Exercises</a></div>
+            <div class="col-12 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
+        </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Exercise 7: Solution</h4>
-                        <p>What interest rate is required for a deposit to double in 10 years?</p>
-                        <p>Remember to maintain the 2:1 ratio. It makes the math easy to start with Future Value (FV) = 2 and Present Value (PV) = 1.</p>
-                        <p>Variables:</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">Present Value (PV) = 1<br>
-                            Future Value (FV) = 2<br>
-                            i = ?<br>
-                            n = 10
-                        </p>
-                        <p>Plug the numbers into the equation:</p>
-                        <!-- <div><img class="math" src="../images/exponent-step.svg"></div> -->
-                        <p class="math">
-                            <img src="./images/tvm1_question3.png" class="img-fluid " alt="">
-                        </p>
+                        <h4>Exercise 2: Identify the Variables</h4>
+                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank. Then submit your answer.</p>
+                        <p class="question">If I deposit $2,000 in an account that earns an annually compounded rate of 8%, how much will my account be worth in 15 years?</p>
+                        <div class="container">
+                            <div class="">
+                                <form action="" class="indent">
+
+                                    <label>Present Value (PV)</label>
+                                    <input id="Present Value (PV)alue-ex2" type="number"><br>
+
+                                    <label>Future Value (FV) </label>
+                                    <input id="Future Value (FV)alue-ex2" type="number"><br>
+
+                                    <label>Interest (i)</label>
+                                    <input id="int-ex2" type="number"><br>
+
+                                    <label>Time (n)</label>
+                                    <input id="yrs-ex2" type="number"><br>
+
+                                </form>
+                                <button onclick="exercise_2()" type="button" class="btn calculate-btn">Submit</button>
+                            </div>
+                            <br>
+                            <div class="answer" id="answer-ex2"></div>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
+                    <a href="exerciseIntro-1.html" type="button" class="btn">Back</a>
                     <a href="" type="button" class="btn">Continue</a>
                 </div>
             </div>
